--- a/Andi Portofolio/styles.css
+++ b/Andi Portofolio/styles.css
@@ -123,11 +123,11 @@ color: black !important;
 }
 
 .modal-header {
-    color-background: ;
+    background-color: #868fba;
 }
 
 .modal-footer {
-    color-background: ;
+    background-color: #868fba;
 }
 
 .btn-link {
