--- a/Andi Portofolio/styles.css
+++ b/Andi Portofolio/styles.css
@@ -136,3 +136,11 @@ color: black !important;
     text-decoration: none;
 }
 
+/* Saat mengarahkan kursor ke ikon */
+.icon a:hover {
+    transform: scale(1.1); /* Perbesar ikon saat dihover */
+    transition: transform 0.3s ease; /* Animasi perubahan */
+    color: #FF5733; /* Ganti warna teks saat dihover */
+}
+
+
